--- a/src/main/resources/templates/client/game/multi/result.html
+++ b/src/main/resources/templates/client/game/multi/result.html
@@ -13,7 +13,7 @@
             <!-- 2등 -->
             <div class="podium-item second" th:if="${#lists.size(results) > 1}">
                 <div class="podium-rank">🥈</div>
-                <div class="podium-player" th:text="${results[1].nickname}">2등</div>
+                <div class="podium-player second-name" th:text="${results[1].nickname}">2등</div>
                 <div class="podium-score" th:text="${results[1].score} + '점'">0점</div>
                 <div class="podium-correct" th:text="'정답: ' + ${results[1].correctCount} + '개'">정답: 0개</div>
                 <div class="podium-stand second-stand">2</div>
@@ -23,7 +23,7 @@
             <div class="podium-item first" th:if="${#lists.size(results) > 0}">
                 <div class="podium-crown">👑</div>
                 <div class="podium-rank">🥇</div>
-                <div class="podium-player" th:text="${results[0].nickname}">1등</div>
+                <div class="podium-player first-name" th:text="${results[0].nickname}">1등</div>
                 <div class="podium-score" th:text="${results[0].score} + '점'">0점</div>
                 <div class="podium-correct" th:text="'정답: ' + ${results[0].correctCount} + '개'">정답: 0개</div>
                 <div class="podium-stand first-stand">1</div>
@@ -32,7 +32,7 @@
             <!-- 3등 -->
             <div class="podium-item third" th:if="${#lists.size(results) > 2}">
                 <div class="podium-rank">🥉</div>
-                <div class="podium-player" th:text="${results[2].nickname}">3등</div>
+                <div class="podium-player third-name" th:text="${results[2].nickname}">3등</div>
                 <div class="podium-score" th:text="${results[2].score} + '점'">0점</div>
                 <div class="podium-correct" th:text="'정답: ' + ${results[2].correctCount} + '개'">정답: 0개</div>
                 <div class="podium-stand third-stand">3</div>
